; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/mfiutil/extr_mfi_drive.c_mfi_pd_get_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/mfiutil/extr_mfi_drive.c_mfi_pd_get_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mfi_pd_info = type { i32 }

@MFI_DCMD_PD_GET_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mfi_pd_get_info(i32 %0, i32 %1, %struct.mfi_pd_info* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.mfi_pd_info*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca [2 x i32], align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store %struct.mfi_pd_info* %2, %struct.mfi_pd_info** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = getelementptr inbounds [2 x i32], [2 x i32]* %9, i64 0, i64 0
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @mbox_store_device_id(i32* %10, i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @MFI_DCMD_PD_GET_INFO, align 4
  %15 = load %struct.mfi_pd_info*, %struct.mfi_pd_info** %7, align 8
  %16 = getelementptr inbounds [2 x i32], [2 x i32]* %9, i64 0, i64 0
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @mfi_dcmd_command(i32 %13, i32 %14, %struct.mfi_pd_info* %15, i32 4, i32* %16, i32 2, i32* %17)
  ret i32 %18
}

declare dso_local i32 @mbox_store_device_id(i32*, i32) #1

declare dso_local i32 @mfi_dcmd_command(i32, i32, %struct.mfi_pd_info*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
